opt_range.cc, range.result, range.test:   Bug #6045: Binary Comparison regression in MySQL 4.1   Binary searches didn't use a case insensitive index, now they do.